# bgp-ai-agent

./: README.md  bgp_agent.py  bgpctl.py  config.yaml  main.py  pyproject.toml  verify_full.sh  verify_mgmt.sh
examples/: peer1.yaml  peer2.yaml
src/: client.py  config.py  fsm.py  mgmt.py  protocol.py  rib.py  server.py  session.py  utils.py
tests/: test_protocol.py
